eks/deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: noke-mcp-svc
  namespace: noke-mcp
spec:
  selector:
    app: noke-mcp
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
