eks/deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noke-mcp-ingress
  namespace: noke-mcp
  annotations:
    kubernetes.io/ingress.class:               alb
    alb.ingress.kubernetes.io/scheme:          internet-facing
    alb.ingress.kubernetes.io/target-type:     ip
    alb.ingress.kubernetes.io/listen-ports:    '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-2:440124919638:certificate/a8a07d53-9b7a-4e6d-ba20-945e649677ab"
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  rules:
    - host: mcp.smartentry.noke.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: noke-mcp-svc
                port:
                  number: 80
